# tonestep

./: .gitignore  LICENSE  Makefile  README.md  flake.nix  flutter_launcher_icons.yaml  flutter_native_splash.yaml  pubspec.yaml
.direnv/: flake-profile-4-link
eartrainer/: Makefile  README.md  pubspec.yaml
eartrainer/android/app/: build.gradle
eartrainer/integration_test/: simple_test.dart
eartrainer/ios/Runner/: Info.plist
eartrainer/ios/Runner.xcodeproj/: project.pbxproj
eartrainer/lib/: main.dart
eartrainer/linux/: CMakeLists.txt  my_application.cc
eartrainer/rust/: Cargo.toml
eartrainer/rust/src/: frb_generated.rs
eartrainer/rust/src/api/: simple.rs
eartrainer/rust_builder/: pubspec.yaml
eartrainer/web/: index.html  manifest.json
eartrainer/windows/: CMakeLists.txt
integration_test/: simple_test.dart
linux/: my_application.cc
rust/src/: android.rs  frb_generated.rs
rust/src/api/: notes.rs  (+1 more)
rust_builder/: pubspec.yaml
rust_builder/ios/: rust_lib_eartrainer.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/windows/: CMakeLists.txt
tonestep/: README.md  pubspec.yaml
tonestep/integration_test/: simple_test.dart
tonestep/lib/: main.dart
tonestep/linux/: CMakeLists.txt
tonestep/rust/: Cargo.toml
tonestep/rust/src/: frb_generated.rs  lib.rs  main.rs
tonestep/rust/src/api/: mod.rs  notes.rs  simple.rs
tonestep/rust/src/player/: exercise_generator.rs  manager.rs  mod.rs  player.rs
tonestep/web/: index.html  manifest.json
web/: manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+49 files in other folders)
