[package]
name = "rust_lib_eartrainer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.4.0"
jni = "0.21.1"
ndk-context = "0.1.1"
oboe = { version = "0.4.6", features = [ "java-interface", "shared-stdcxx" ] }
cpal = "0.13.5"
rodio = "0.19.0"

