[package]
name = "rust_lib_tonestep"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
flutter_rust_bridge = "=2.5.0"
cpal = "0.13.5"
log = "0.4"
rodio = "0.19.0"
rand = "0.8.5"
ctor = "0.2.8"
hound = "3.5.1"
lazy_static = "1.5.0"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21.1"
ndk-context = "0.1.1"
oboe = { version = "0.4.6", features = [ "java-interface", "shared-stdcxx" ] }

[dev-dependencies]
test-log = "0.2.16"
